fix menu layout issue - fix php notice - fix missing select2 scripts when WooCommerce is not enabled - new screenshot with author credits

--- a/admin-scripts/admin-css.css
+++ b/admin-scripts/admin-css.css
@@ -1,3 +1,6 @@
 /**********************
 Admin CSS goes here
 ***********************/
+.edit-post-meta-boxes-area.is-side .meta-box-sortables select {
+  max-width: 200px;
+}
