--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -93,7 +93,9 @@
             }
 
             a {
-                width: 200px;
+                display: inline-block;
+                white-space: nowrap;
+                max-width: 200px;
 
                 &:empty & {
                     display: none;
